fixed issue with both players advertising and acting as admin created multiplayerListener skeleton in GameViewControler made the host starting player addded alert code commented at bottom of multiplayer for later use

--- a/Tankz/Base.lproj/Main.storyboard
+++ b/Tankz/Base.lproj/Main.storyboard
@@ -62,6 +62,7 @@
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
+                                    <action selector="createGame:" destination="MSC-9b-YLM" eventType="touchUpInside" id="HjG-6a-jrB"/>
                                     <segue destination="usC-V1-22A" kind="show" identifier="createGameSegue" id="IsV-7P-a5j"/>
                                 </connections>
                             </button>
